- Implement backend endpoints with service classes for PdfReport functionality - Add unit tests to ensure robustness - Complete frontend components for PdfReport usage and display